gateone.py:  Added a little try/except block inside _send_refresh to prevent a transient error from showing up in the logs.  It would only ever happen if the user disconnected at just the right moment but who wants to have to explain such things in the logs? gateone.js:  Fixed a bug in GateOne.Visual.enableScrollback() where it wasn't actually re-enabling scrollback.  This should fix the problem where the scrollback buffer would be missing after clicking on a terminal in grid view. gateone.js:  Got rid of the scrollTimer in GateOne.Net.sendChars() and modified GateOne.Terminal.applyScreen() to scroll the terminal to the bottom after a screen update. gateone.js:  Added GateOne.Visual.toggleOverlay().  It provides a visual indication of whether or not Gate One is currently accepting keyboard input into terminals.  GateOne.Input.capture() and GateOne.Input.disableCapture() have both been updated to use this new function. gateone.js:  The scrollbar adjustments are now done after a 5-second timeout in order to allow the browser to get everything drawn (especially the scrollbar). CSS Themes:  Added the new overlay ID so it can be controlled via themes. Logging Plugin:  Fixed some bugs associated with enumerate_logs() where it would get stuck with empty/bad log files.  Now it will just skip any it finds like that.  logging.js has also been modified to use the total number of logs received (via WebSocket messages) rather than the total number of files in the log directory (as given by the server) when it displays these totals to the user. hello_embedded:  Fixed a minor issue with the 4th terminal where it wouldn't start capturing input until after you clicked on the terminal.

--- a/gateone/templates/themes/dark-black.css
+++ b/gateone/templates/themes/dark-black.css
@@ -979,3 +979,15 @@ hr {
     right: 1.3em;
     bottom: 0.1em;
 }
+#{{prefix}}overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFF;
+    opacity: .1;
+    z-index: 510; /* Just above the pastearea */
+}
